[package]
name = "ap-cavage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
chrono = "0.4.26"
sigh = { path = "../sigh" }
http = "0.2.9"
toml = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive"] }
url = "2.4.0"
